2006-11-06  Jb Evain  <jbevain@gmail.com>

	* First check-in of the merging tool by:
		Alex Prudiky  <prudkiy@gmail.com>